--- a/index-4.html
+++ b/index-4.html
@@ -28,10 +28,9 @@
 
     // ============================================
     // SUPABASE CONFIGURATION
-    // Replace these with your actual Supabase credentials
     // ============================================
-    const SUPABASE_URL = 'YOUR_SUPABASE_URL';
-    const SUPABASE_ANON_KEY = 'YOUR_SUPABASE_ANON_KEY';
+    const SUPABASE_URL = 'https://atepilrfnektfuqtmryx.supabase.co';
+    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImF0ZXBpbHJmbmVrdGZ1cXRtcnl4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjcxODk5NDEsImV4cCI6MjA4Mjc2NTk0MX0.gJ8lbzRTA5KImG_cFiuNez1V75R4hVpdeOlxPltjHcE';
     
     // Check if Supabase is configured
     const isSupabaseConfigured = () => {
