--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id="root"></div>
   
   <script type="text/babel">
-    const { useState, useEffect, useCallback, useRef, createContext, useContext } = React;
+    const { useState, useEffect, useCallback, useRef, useMemo, createContext, useContext } = React;
 
     // ============================================
     // ORBIT - Friendship Tracking Solar System
